--- a/hw2/makefile
+++ b/hw2/makefile
@@ -1,10 +1,10 @@
 cc=gcc
 cflags=-Wall -Werror -ansi -pedantic -g
-objects=main.o fw_functions.o
-all: main
-main: main.o fw_functions.o
-	$(cc) $(cflags) -o main $(objects)
-main.o: fw_functions.h
+objects=fw.o fw_functions.o
+all: fw
+fw: fw.o fw_functions.o
+	$(cc) $(cflags) -o fw $(objects)
+fw.o: fw_functions.h
 fw_functions.o: fw_functions.h
 clean: 
-	rm main $(objects)
+	rm fw $(objects)
