started usage and made make

--- a/lab6/makefile
+++ b/lab6/makefile
@@ -1,3 +1,8 @@
 cc=gcc
-cflags=-ansi -g -pedantic -Wall
-
+cflags=-Wall -ansi -g -pedantic
+objects= timer.c
+all:timer
+timer: timer.o
+	$(cc) $(cflags) -o timer $(objects)
+clean: 
+	rm *.o timer
