signals are going to kill me

--- a/lab6/makefile
+++ b/lab6/makefile
@@ -3,6 +3,6 @@ cflags=-Wall -ansi -g -pedantic
 objects= timer.c
 all:timer
 timer: timer.o
-	$(cc) $(cflags) -o timer $(objects)
+	$(cc) $(cflags) -o timeit $(objects)
 clean: 
 	rm *.o timer
